pkg/config/analysis/analyzers/testdata/envoy-filter-route-cache.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: testing
---
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: route-a-allow
  namespace: testing
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: route-a
  action: ALLOW
  rules:
    - {}
---
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: lua-before-router
  namespace: testing
spec:
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
      patch:
        operation: INSERT_FIRST
        value:
          name: envoy.filters.http.lua
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            inlineCode: |
              function envoy_on_request(handle) end
---
# A sidecar-only patch cannot interact with route-dependent Gateway filters.
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: sidecar-lua
  namespace: testing
spec:
  configPatches:
    - applyTo: HTTP_FILTER
      match:
        context: SIDECAR_INBOUND
      patch:
        operation: INSERT_FIRST
        value:
          name: envoy.filters.http.lua
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.lua.v3.Lua
            inlineCode: |
              function envoy_on_request(handle) end
